--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -3,7 +3,7 @@ server {
 
   location / {
     root /usr/share/nginx/html;
-    index indext.html index.htm;
+    index index.html index.htm;
     try_files $uri $uri/ /index.html;
   }
 }
